--- a/NuId-Ch2/NeutrinoID.tex
+++ b/NuId-Ch2/NeutrinoID.tex
@@ -2,8 +2,11 @@
 
 The work presented in this note relies on the Pandora approach for event reconstruction~\cite{bib:pandoraub}. The scope of Pandora is to do the low-level pattern-recognition step of the reconstruction, i.e. group hits into clusters, clusters into particles and particles into hierarchies. 
 
-\subsubsection{Slicing \textcolor{green}{Wouter}}
-After the hit creation, the Pandora Cosmic Pattern Recognition is run over all hits, aiming to construct muon tracks and associated delta showers. At this stage, obvious cosmic activity is tagged using geometric information. Now, the obvious cosmic tagged hits are discarded and the filtered hit collection enters a next stage, slicing. A "slice" is a subset of hits which are topological distinct. It is assumed that different slices correspond to different particle hierarchies. Each slice is now reconstructed both under the cosmic hypothesis and the neutrino hypothesis. A typical event contains approximately 5 slices.
+\subsubsection{Slicing \textcolor{green}{Wouter ... P.R. Elena}}
+The creation of a ``slice" is the first step of the Pandora processing. A slice is a subset of hits  on a plane which are topological distinct:  it is assumed that different slices correspond to different particles. To produce slices, the Pandora Cosmic Pattern Recognition is first run over all hits, aiming to construct muon tracks and associated delta showers and producing slices under the cosmic hypothesis. At this stage, obvious cosmic activity is tagged using geometric information. The obvious cosmic tagged hits are discarded; the filtered hit collection is used as input to the Pandora Neutrino Pattern Recognition which reconstruct slices under the neutrino hypothesis. 
+Each slice is now reconstructed both under the cosmic hypothesis and the neutrino hypothesis. A typical event contains approximately 5 slices.
+
+%After the hit creation, the Pandora Cosmic Pattern Recognition is run over all hits, aiming to construct muon tracks and associated delta showers. At this stage, obvious cosmic activity is tagged using geometric information. Now, the obvious cosmic tagged hits are discarded and the filtered hit collection enters a next stage, slicing. A "slice" is a subset of hits which are topological distinct. It is assumed that different slices correspond to different particle hierarchies. Each slice is now reconstructed both under the cosmic hypothesis and the neutrino hypothesis. A typical event contains approximately 5 slices.
 
 \subsubsection{Clustering and Vertex Finding \textcolor{green}{Wouter}} 
 Pandora starts by running the 2D clustering on the hits in each slice and in each plane separately. Then, a number of 3D candidate vertices is created by finding positions that project down on to the ends of the 2D clusters we have made so far. All of these candidates are fed into the support vector machine (SVM) vertex selection, and the most appropriate one is chosen. This 3D vertex is used to split any existing clusters that straddle the vertex. Then, the cluster matching algorithms are run, where the clusters are compared between views and modified to improve the matching.
